force-app/main/default/objects/b3s__Event_Alert__c/b3s__Event_Alert__c.object-meta.xml
<CustomObject>
    <label>Event Alert</label>
    <nameField>
        <displayFormat>E-ALR-{00000}</displayFormat>
        <label>Event Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>