force-app/main/default/objects/b3s__Event_Alert__c/fields/b3s__Category__c.field-meta.xml
<CustomField>
    <fullName>b3s__Category__c</fullName>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>