force-app/main/default/objects/b3s__Event_Alert__c/fields/b3s__Details__c.field-meta.xml
<CustomField>
    <fullName>b3s__Details__c</fullName>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>