force-app/main/default/objects/b3s__Event_Alert__c/fields/b3s__Manually_Created__c.field-meta.xml
<CustomField>
    <fullName>b3s__Manually_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This alert was created from a Flow/Apex Trigger or other automation.</inlineHelpText>
    <label>Manually Created</label>
    <type>Checkbox</type>
</CustomField>