force-app/main/default/objects/b3s__Event_Alert__c/fields/b3s__Points__c.field-meta.xml
<CustomField>
    <fullName>b3s__Points__c</fullName>
    <label>Points</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>