force-app/main/default/objects/b3s__Event_Alert__c/fields/b3s__Shift__c.field-meta.xml
<CustomField>
    <fullName>b3s__Shift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shift</label>
    <referenceTo>b3s__Shift__c</referenceTo>
    <relationshipLabel>Event Alerts</relationshipLabel>
    <relationshipName>Event_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>